[tool.poetry]
name = "carousel"
version = "0.1.0"
description = ""
authors = ["John Leen <jleen@saturnvalley.org>"]

[tool.poetry.dependencies]
python = "^3.12"
appeldryck = {path = "../appeldryck", develop=true}
pillow = "^10.2.0"

[tool.poetry.scripts]
carousel = 'carousel:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
